Fix Vercel configuration

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,6 @@
 {
+  "version": 2,
   "buildCommand": "cd Frontend && npm install && npm run build",
-  "outputDirectory": "Frontend/dist"
+  "outputDirectory": "Frontend/dist",
+  "installCommand": "echo 'Skipping root install'"
 }
